
// Spelare animator parameter
public static class SAP {
    public const string moveX = "moveX";
    public const string isMoving = "isMoving";
    public const string axisXinput = "Horizontal";
    public const string forceX = "forceX";
    public const string impulseY = "impulseY";
    public const string axisYinput = "Vertical";
    
}